recolocación de las código